<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Edukka</string>
    <string name="app_user">Javier Rosales Bañón</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register Here</string>

    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="fullname">Full Name</string>
    <string name="classid">Class ID (optional)</string>
    <string name="signup">Sign Up</string>

    <string name="nodata">No Data Available</string>
    <string name="myprofile">My Profile</string>
    <string name="myclass">My Class</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>

    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
...
    <string name="password_error">Passwords are not the same</string>

    <string name="editprofile">Edit Profile</string>
    <string name="editclass">Edit Class</string>
    <string name="editgame">Edit Game</string>
    <string name="newclass">New Class</string>
    <string name="save">Save</string>
    <string name="create">Create</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="deleteuser">Delete User</string>
    <string name="deleteclass">Delete Class</string>
    <string name="deletegame">Delete Game</string>
    <string name="deletequiz">Delete Quiz</string>

    <string name="dialoguser">This action will erase your user from the database, are you sure?</string>
    <string name="dialogclass">This action will erase your class from the database, are you sure?</string>
...
