...
                android:textColor="?attr/colorAccent"
                android:text="@string/information"
                android:textSize="@dimen/article_title"
                android:layout_marginTop="@dimen/md_keylines_x3" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/class_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                tools:text="Elementary school of Malaga" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines_x3"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:onClick="save"
...
