...
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:background="@drawable/avatar_dog"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
...
                android:textColor="?attr/colorAccent"
                android:text="@string/fullname"
                android:textSize="@dimen/article_title"
                android:layout_marginTop="@dimen/md_keylines_x3" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/app_user" />

            <TextView
                android:layout_width="match_parent"
...
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_mode_edit_white_24dp"
        android:visibility="invisible"
        android:layout_margin="@dimen/fab_margin" />
...
